feat: created post documentation for orders
