# src/swagger-output.json
@@ -1656,7 +1656,7 @@
 				}
 			}
 		},
-		"/api/v1/orders": {
+		"/api/v1/rental-order": {
 			"post": {
 				"tags": ["Order"],
 				"summary": "Criar um novo pedido",
@@ -1668,68 +1668,25 @@
 							"schema": {
 								"type": "object",
 								"properties": {
-									"plate": {
+									"car_id": {
 										"type": "string",
-										"example": "MKF3123",
-										"description": "Placa do carro"
+										"example": "3e2846a7-8d26-46ad-80ee-82029724a761",
+										"description": "ID do Carro"
 									},
-									"brand": {
+									"customer_id": {
 										"type": "string",
-										"example": "Ford",
-										"description": "Marca do carro"
-									},
-									"model": {
-										"type": "string",
-										"example": "Fusion",
-										"description": "Modelo do carro"
-									},
-									"year": {
-										"type": "number",
-										"example": 2019,
-										"description": "Ano de fabricação do carro"
-									},
-									"daily_price": {
-										"type": "number",
-										"example": 300.0,
-										"description": "Preço diário de aluguel do carro"
-									},
-									"km": {
-										"type": "number",
-										"example": 30000,
-										"description": "Quilometragem do carro"
-									},
-									"status": {
-										"type": "string",
-										"enum": ["ativo", "inativo", "excluído"],
-										"example": "ativo",
-										"description": "Status do carro"
-									},
-									"items": {
-										"type": "array",
-										"items": {
-											"type": "string",
-											"example": "vidro eletrico",
-											"description": "Nome do item"
-										},
-										"description": "Lista de itens associados ao carro"
+										"example": "a8052f5b-abdc-48b0-aa52-e8eb64a5cd76",
+										"description": "ID do Cliente"
 									}
 								},
-								"required": [
-									"plate",
-									"brand",
-									"model",
-									"year",
-									"daily_price",
-									"km",
-									"status"
-								]
+								"required": ["car_id", "customer_id"]
 							}
 						}
 					}
 				},
 				"responses": {
 					"201": {
-						"description": "Carro criado com sucesso",
+						"description": "Pedido criado com sucesso",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -1737,7 +1694,71 @@
 									"properties": {
 										"id": {
 											"type": "string",
-											"example": "e6d7f7d3-4e32-42e3-837a-86753bcae83b"
+											"example": "e57e3a2d-0a16-4f8f-99be-64723bc1d396"
+										}
+									}
+								}
+							}
+						}
+					},
+					"404_CustomerNotFound": {
+						"description": "Cliente não encontrado",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"message": {
+											"type": "string",
+											"example": "Customer not found"
+										}
+									}
+								}
+							}
+						}
+					},
+					"404_CarNotFound": {
+						"description": "Carro não encontrado",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"message": {
+											"type": "string",
+											"example": "Car not found"
+										}
+									}
+								}
+							}
+						}
+					},
+					"400_CarInUse": {
+						"description": "Carro já está em uso",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"message": {
+											"type": "string",
+											"example": "Car can't be used. It is already in use"
+										}
+									}
+								}
+							}
+						}
+					},
+					"400_CustomerOrderOpen": {
+						"description": "Cliente já possui uma ordem em aberto",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"message": {
+											"type": "string",
+											"example": "Can't create order because customer has an opened order already"
 										}
 									}
 								}
@@ -2011,7 +2032,7 @@
 				}
 			}
 		},
-		"/api/v1/orders/{id}": {
+		"/api/v1/rental-order/{id}": {
 			"get": {
 				"tags": ["Order"],
 				"summary": "Busca um pedido por ID",
